tests/functional/fail/mut_arg.stderr
error: pure_functional: function with mutable arguments is not supported
 --> tests/functional/fail/mut_arg.rs:3:1
  |
3 | #[pure_functional]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `pure_functional` (in Nightly builds, run with -Z macro-backtrace for more info)
